# awful_dataset_builder

./: .gitignore  Cargo.toml  README.md  build_systems_programming_and_admin_jsonl.nu  check_counts.nu  create_training_prompts_for_books.nu  create_training_prompts_for_code.nu  transform_code_output_to_conversations.nu
complete/code/: AArch64_Assembly Algorithms_questions_dataset.yaml  AArch64_Assembly Algorithms_questions_dataset_grouped_output.yaml  Hyper_questions_dataset.yaml  Hyper_questions_dataset_grouped_output.yaml  Ripgrep_questions_dataset.yaml  SQLite_questions_dataset.yaml
complete/manpages/: manpages_dataset.yaml
complete/mdbooks/: Cargo_questions_dataset.yaml  Helix_questions_dataset.yaml  Nushell_questions_dataset.yaml  Rust_questions_dataset.yaml
complete/tealdeer/: Tealdeer.csv  Tealdeer_questions_dataset.yaml
inputs/code/: AArch64_Assembly Algorithms_questions.yaml  Hyper_questions.yaml  Ripgrep_questions.yaml
inputs/manpages/: patch_questions.yaml  path_helper_questions.yaml  pathchk_questions.yaml  pax_questions.yaml  pbcopy_questions.yaml  pboard_questions.yaml  pbpaste_questions.yaml  pbs_questions.yaml  pcap-config_questions.yaml  pcap-filter_questions.yaml  pcap-tstamp_questions.yaml  pcre_table_questions.yaml  pcsstatus_questions.yaml  pdisk_questions.yaml  peg_interp_questions.yaml  peg_questions.yaml  perl5004delta_questions.yaml  perl5005delta_questions.yaml  perl5100delta_questions.yaml  perl5101delta_questions.yaml  perl5120delta_questions.yaml  perl5121delta_questions.yaml  perl5122delta_questions.yaml  (+911 more)
src/: main.rs
(+28 files in other folders)
