[package]
name = "awful_dataset_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.38"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full"] }
awful_aj = { version = "*", git = "https://github.com/graves/awful_aj" }
regex = "1.11.1"
